welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:2: error: ';' expected but '=' found.
  vuBiscuit: Boolean = false
                     ^