welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  vuBiscuit: Boolean = false
  for (i <-0 to 6 )
  	{for (i <-0 to 6)
    {
      if(estSurBiscuit)
      	{vuBiscuit = true}
      avance()
    }
    for (i<-0 to 6)
    	
    		{recule();}
    if (vuBiscuit)
    {return true}}
 
  return false;
  
}